2010-12-28  Steffen Gebert  <steffen@steffen-gebert.de>

	* Follow-up to #16852: Code clean-up

2010-12-28  Steffen Kamper  <steffen@typo3.org>

	* Release of TYPO3 4.5.0beta3

2010-12-28  Oliver Hader  <oliver.hader@typo3.org>

	* Fixed bug #16846: Sorting order of newly created child elements on workspaces is wrong

2010-12-28  Steffen Gebert  <steffen@steffen-gebert.de>

	* Fixed bug #16093: Media content object with selection of "HTML Embed Element" does not respect dimension settings (Thanks to Simon Schaufelberger)

2010-12-28  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #16861: Minor alignment issues in TCE forms
	* Follow-up to issue #16861: Miss alignment of fields added by extensions

2010-12-28  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to #16039: HTML template had doubled content
	* Updated ExtensionManager to version 4.5.0beta3a.
	* Updated Workspaces and Version extension to version 4.5.0beta3b/a. See their ChangeLog for details.
	* Updated Workspaces and Version extension to version 4.5.0beta3. See their ChangeLog for details.

2010-12-27  Ingo Renner  <ingo@typo3.org>

	* Fixed bug #16857: Refine new labels in pages and tt_content TCE forms (Thanks to Mark Lehm and Jeff Segars for helping)

2010-12-27  Steffen Kamper  <steffen@typo3.org>

	* Follow-up to EM-Merge: fixed a php warning
	* Fixed bug #16384: Optimize stdWrap usage for TypoScript content element OTABLE (Thanks to Jo Hasenau)
	* Fixed bug #16852: Bugfix: Grid View must be combined with Column View and get some visual usability enhancements (Thanks to Jo Hasenau)
	* Add sysext pagetree to required extension list
	* Fixed bug #16387: Optimize stdWrap usage for TypoScript content element QTOBJECT (Thanks to Jo Hasenau)
	* Fixed bug #16429: Optimize stdWrap usage for tslib_content (Thanks to Jo Hasenau)
	* Fixed bug #16731: Fill the color gap between module menu and tree-less modules (Thanks to Steffen Gebert)
	* Removed sysext fal