@@ -1,13 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes" ?>
-<T3locallang>
-	<meta type="array">
-		<description>[Insert Title]</description>
-		<type>[Insert type: module/CSH/database]</type>
-		<csh_table>[first argument of the t3lib_extMgm::addLLrefForTCAdescr() function call including this file inside of ext_tables.php]</csh_table>
-	</meta>
-	<data type="array">
-		<languageKey index="default" type="array">
-			<label index="[item_key]">[item_value]</label>
-		</languageKey>
-	</data>
-</T3locallang>
